--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap');
 
-
-
 body{
     margin: 0;
     background-color: #FAEBE6;
@@ -11,11 +9,11 @@ nav{
     font-family:'PT Sans', sans-serif; 
     font-style: normal;
     font-weight: 700;
-    font-size: 20px;
+    font-size: 17px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    min-height: 10vh;
+    min-height: 9vh;
     background-color: #FAEBE6;
     box-shadow: 0px 4px 60px rgba(248, 182, 160, 0.8);
     border-radius: 0px 0px 20px 20px;
@@ -24,7 +22,7 @@ nav{
 }
 
  .nav-links li{
-    padding:20px;
+    padding-right: 50px;
     padding-left:0px;
 }
 
