--- a/styles.css
+++ b/styles.css
@@ -2,11 +2,11 @@
 
 body {
     margin: 0;
-   
+
     font-family: 'PT Sans', sans-serif;
-    width-max:1024px;
+    width-max: 1024px;
     background-color: #FAEBE6;
-   
+
 }
 
 nav {
@@ -60,12 +60,12 @@ a {
 }
 
 
-.acceuil{
-    height:780px;
+.acceuil {
+    height: 780px;
     border: solid black 3px;
 }
 
-.text1{
+.text1 {
     margin-left: 10%;
     margin-top: 15%;
     background: linear-gradient(90deg, #FF1C13 0%,
@@ -74,14 +74,15 @@ a {
             #FEC808 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-  
+
 }
 
 h1 {
     font-size: 50px;
 
 }
-p{
+
+p {
     font-size: 26px;
 }
 
@@ -105,7 +106,7 @@ p{
     z-index: -1;
     background: #FF6B00;
     transform: rotate(31.31deg);
-  
+
 
 }
 
@@ -137,21 +138,76 @@ p{
 }
 
 
-.page2{
+.page2 {
     background-color: #FAEBE6;
     border: solid 3px red;
     height: 780px;
 }
-.text2{
+
+.text2 {
     margin-top: 20%;
-    
+
     margin-left: 10%;
 
-    background: linear-gradient(90deg, #B03656  7.81%,
-    #6E286B 49.48%,
-    #4F1F29 95.31%);
+    background: linear-gradient(90deg, #B03656 7.81%,
+            #6E286B 49.48%,
+            #4F1F29 95.31%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     font-size: 26px;
 
 }
+
+.page3 {
+    border: solid 3px red;
+    height: 780px;
+}
+
+.text3 {margin-top: 20%;
+
+    margin-left: 10%;}
+
+.page4 {
+    border: solid 3px red;
+    height: 780px;
+}
+
+.text4 {margin-top: 20%;
+
+    margin-left: 10%;}
+
+.page5 {
+    border: solid 3px red;
+    height: 780px;
+}
+
+.text5 {margin-top: 20%;
+
+    margin-left: 10%;}
+
+.page6 {
+    border: solid 3px red;
+    height: 780px;
+}
+
+.text6 {margin-top: 20%;
+
+    margin-left: 10%;}
+
+.page7 {
+    border: solid 3px red;
+    height: 780px;
+}
+
+.text7 {margin-top: 20%;
+
+    margin-left: 10%;}
+
+.page8 {
+    border: solid 3px red;
+    height: 780px;
+}
+
+.text8 {margin-top: 20%;
+
+    margin-left: 10%;}
