--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
     margin: 0;
     
     font-family: 'PT Sans', sans-serif;
-    width: 100%;
+    max-width: 1920px;
     background-color: #FAEBE6;
     overflow-x: hidden;
 
@@ -64,7 +64,7 @@ a {
 .acceuil {
     height: 780px;
     border: solid black 3px;
-    width:100%;
+    max-width: 1920px;
 }
 
 .text1 {
