--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,9 @@ body {
     margin: 0;
     
     font-family: 'PT Sans', sans-serif;
-    max-width: 1920px;
+    width: 100%;
     background-color: #FAEBE6;
-    /*overflow-x: hidden;*/
+    overflow-x: hidden;
 
 }
 
@@ -151,7 +151,7 @@ p {
     padding: 0;
     margin: 0;
 
-    width:820px;
+    width:800px;
     border: solid blue 3px;
     margin-top: 10%;
     margin-left: 10%;
