--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
     font-family: 'PT Sans', sans-serif;
     width: 100%;
     background-color: #FAEBE6;
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
 
 }
 
